--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/DasLanky/Potato/issues"
   },
-  "homepage": "https://github.com/DasLanky/Potato#readme"
+  "homepage": "https://github.com/DasLanky/Potato#readme",
+  "dependencies": {
+    "express": "^4.14.0",
+    "express-logger": "^0.0.3",
+    "nib": "^1.1.0",
+    "stylus": "^0.54.5"
+  },
+  "devDependencies": {}
 }
