--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "dependencies": {
     "express": "^4.14.0",
     "express-logger": "^0.0.3",
+    "express-session": "^1.14.0",
     "nib": "^1.1.0",
-    "stylus": "^0.54.5"
+    "pug": "^2.0.0-beta4",
+    "stylus": "^0.54.5",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {},
   "bin": {
