--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   },
   "homepage": "https://github.com/DasLanky/Potato#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-logger": "^0.0.3",
     "express-session": "^1.14.0",
     "nib": "^1.1.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta4",
     "stylus": "^0.54.5",
     "underscore": "^1.8.3"
