--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.14.0",
     "express-logger": "^0.0.3",
     "express-session": "^1.14.0",
+    "mime": "^1.3.4",
     "nib": "^1.1.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
